Added category API documentation
